apps/openclaw/secret.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: openclaw
stringData:
    GITHUB_MCP_TOKEN: ENC[AES256_GCM,data:IsP6Edsd68YxemwJA7neN07BxNhzp/8GssezULf0/zISHCm8H7K+RAZ2WOTW7VmPQ4tNbR9tbpNdKaCSLGN4OQ==,iv:nYyRKpkUwATezypKy6Iou+MqbcOIaiADjFTdHTu8b7Q=,tag:xr8ZypP27ftGRDoUJ7g2aA==,type:str]
    GITHUB_APP_PRIVATE_KEY: ENC[AES256_GCM,data:wAqwLL/pr+w6GUgcs786/AHcMbDLsGi90T+L+fk4/n104IkGw7/Auw8k8DXdDXX71lVzsjHGQzj8WY7vf1vwZEM3buJRBYsPy6obFTl8ZfX/4luLdgV5fhIiiGOipI42WNsoyJaC25WuAbmldViQQNSNzaZLnOr4ggBKfcxaXVJCwTmYOV1KzmFcLt/KDOi/weiuQyrN25ccNSMSvsgHcvcCVsoTuLvw0svQGPG9ZNqnEpAVzWmUHLWaOklUW8KeK/sJmckBc7QUxcg7CYtr1fXsWvfYVkfwANxC3QYx3shbKoUXXF5Xe0L+IfAwL/hOKkOTALkRkVMzbLPY7AjWgcTnFkOATXnJPBtwSGXYbeBIs7n/1Lr8s5gt3uT2JLcPpNGNNHx2W+GzXDQh2kpkmNZESC+6gn4IEtEaOOiJZkthBe5xTvMs7pS4T5e4Qg63nS5g [...]
sops:
    age:
        - recipient: age15wxcpw5ppd6zc5dmqn69dxczla0vwa3es086u654l8y2mrj455nqzfapl2
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSMWkxZDRFdDNRLzk4d1Ju
[...]
            SoRfR1v/l2KFKs9dN1FQSiQfmIHQEmObpYwaOE/1OLh8ze8uLzEF6A==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-06-23T06:52:37Z"
    mac: ENC[AES256_GCM,data:0Aa6ombETIy0THSrSSFpybjbKuHvDmkVvpM8P6cd3pW2Egwxp1AZZ+Y0+DqTES/eL2g0fMsxhFqvkhf+HF44PGi4WDax2OIB0NcPd3AvQD8Nv0a4qj9UKuoAqskuksu33BSN9VRbZzKWbK+Y3svbkk6M79mi7KGEJEq8y1PmMFU=,iv:1CS34GfLOFA00BSPKS6/Y7Hr71rsKeMWvB2NWZL3m80=,tag:IfweUN4uEhVBOOpJcTFf0g==,type:str]
    encrypted_regex: ^(data|stringData)$
    version: 3.12.2
